working_controllers/Require_LivenessProbes_Validation/Require_LivenessProbes_Validation/test-fail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-liveness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-liveness
  template:
    metadata:
      labels:
        app: no-liveness
    spec:
      containers:
      - name: nginx
        image: nginx:stable
